# ChangeLog for sec-policy/selinux-hal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.11 2009/12/16 02:53:33 pebenito Exp $

*selinux-hal-2.20091215 (16 Dec 2009)

  16 Dec 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-2.20091215.ebuild:
  New upstream release.

  14 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  -selinux-hal-20070329.ebuild, -selinux-hal-20070928.ebuild,
  selinux-hal-20080525.ebuild:
  Mark 20080525 stable, clear old ebuilds.

*selinux-hal-2.20090730 (03 Aug 2009)

  03 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-2.20090730.ebuild:
  New upstream release.

  18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
  selinux-hal-20070329.ebuild, selinux-hal-20070928.ebuild,
  selinux-hal-20080525.ebuild:
  Drop alpha, mips, ppc, sparc selinux support.

*selinux-hal-20080525 (25 May 2008)

  25 May 2008; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-20080525.ebuild:
  New SVN snapshot.

  16 Mar 2008; Chris PeBenito <pebenito@gentoo.org>
  -selinux-hal-20061114.ebuild:
  Remove old ebuilds.

  03 Feb 2008; Chris PeBenito <pebenito@gentoo.org>
  selinux-hal-20070928.ebuild:
  Mark stable.

*selinux-hal-20070928 (26 Nov 2007)

  26 Nov 2007; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-20070928.ebuild:
  New SVN snapshot.

  04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
  selinux-hal-20070329.ebuild:
  Mark stable.

*selinux-hal-20070329 (29 Mar 2007)

  29 Mar 2007; Chris PeBenito <pebenito@gentoo.org>
  +selinux-hal-20070329.ebuild:
  New SVN snapshot.

*selinux-hal-20061114 (22 Nov 2006)

  22 Nov 2006; Chris PeBenito <pebenito@gentoo.org> +metadata.xml,
  +selinux-hal-20061114.ebuild:
  Initial commit.
