@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.11 2009/12/16 02:53:33 pebenito Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.12 2011/02/05 12:07:11 blueness Exp $
+
+*selinux-hal-2.20101213 (05 Feb 2011)
+
+  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org>
+  +selinux-hal-2.20101213.ebuild:
+  New upstream policy.
 
 *selinux-hal-2.20091215 (16 Dec 2009)
 
